01Envoy快速入门/tls/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - address:
      socket_address: { address: 0.0.0.0, port_value: 8443 }
    name: listener_http
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/server1/"
                route:
                  prefix_rewrite: "/"
                  cluster: webcluster1
              - match:
                  prefix: "/server2/"
                route:
                  prefix_rewrite: "/"
                  cluster: webcluster2
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIICFjCCAbugAwIBAgIUfJqusten9jYQx5SvxX2XH4p+2cIwCgYIKoZIzj0EAwIw
[...]
                  j77cC2AOKiASbA==
                  -----END CERTIFICATE-----
                # filename: "/etc/envoy/certs/front-proxy.crt"
              private_key:
                inline_string: |
                  -----BEGIN EC PRIVATE KEY-----
                  MHcCAQEEIP4zJJ7uStmzgKRF5I1a0WV7mXTfXWmOkgbeGfIZZCYHoAoGCCqGSM49
[...]
                  A/s+DnKufB7RYUC+q+FombMOjRx6xkRW2A==
                  -----END EC PRIVATE KEY-----
                # filename: "/etc/envoy/certs/front-proxy.key"

  clusters:
  - name: webcluster1
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: webcluster1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webserver01
                port_value: 80
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              inline_string: |
                -----BEGIN CERTIFICATE-----
                MIIB1DCCAXqgAwIBAgIUZhkXtou0BF+kKh40aSwxdFr8V+owCgYIKoZIzj0EAwIw
[...]
                MMTqWIs1AiBgyG82nDE6NfjSkaRUk/gOyFdgu/VyyQCVjfTa3Z7pOw==
                -----END CERTIFICATE-----
  - name: webcluster2
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: webcluster2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webserver02
                port_value: 80
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              inline_string: |
                -----BEGIN CERTIFICATE-----
                MIIB1DCCAXqgAwIBAgIUZhkXtou0BF+kKh40aSwxdFr8V+owCgYIKoZIzj0EAwIw
[...]
                MMTqWIs1AiBgyG82nDE6NfjSkaRUk/gOyFdgu/VyyQCVjfTa3Z7pOw==
                -----END CERTIFICATE-----
